--- a/index.html
+++ b/index.html
@@ -58,6 +58,21 @@
         <section class="simple-post-list">
             
                 <article class="simple-post-item">
+                    <a href="/archives/2016-09-23-fe-guide.html" title="前端规范">
+                        <div class="simple-post-item-thumb">
+                            <img src="/static/img/thumb/city-01.jpg" alt="前端规范" />
+                        </div>
+                        <div class="simple-post-item-info">
+                            <h3 class="title">前端规范</h3>
+                            <div class="meta">
+                                <span>Benjamin 发布于</span>
+                                <time>2016-09-23 14:56:25</time>
+                            </div>
+                        </div>
+                    </a>
+                </article>
+            
+                <article class="simple-post-item">
                     <a href="/archives/2016-09-23-article-01.html" title="React 教程-article-01">
                         <div class="simple-post-item-thumb">
                             <img src="/static/img/thumb/city-01.jpg" alt="React 教程-article-01" />
