--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <div class="simple-post-item-info">
                             <h3 class="title">Markdown-syntax</h3>
                             <div class="meta">
-                                <span>zblog 发布于</span>
+                                <span>benjamin 发布于</span>
                                 <time>2016-09-23 16:52:33</time>
                             </div>
                         </div>
